v4.0.0/help/fr.md

# Document d'orientation sur l'interface utilisateur

En général, les options du menu de gauche permettent d'ouvrir de nouvelles fenêtres de renseignements. Vous pouvez épingler ces fenêtres ou les fermer à l'aide des boutons « punaise » et « x », respectivement.

Le symbole de la cloche dans le coin inférieur gauche affiche les notifications liées aux services ou aux renseignements sur la carte. Des messages sont affichés à cet endroit lorsque des services erronés ne peuvent pas être chargés sur la carte.

Pour toute question générale ou technique concernant la Plateforme de cartographie accessible et réutilisable (PCAR) sur laquelle repose cette carte interactive, veuillez communiquer avec [applicationsdecartographieweb‑webmappingapplications@ec.gc.ca](mailto:applicationsdecartographieweb-webmappingapplications@ec.gc.ca). Vous pouvez consulter le référentiel GitHub de la PCAR en cliquant sur le bouton « Au sujet de la PCAR » dans le coin inférieur gauche.


# Repérer les données

Il existe trois façons d'accéder aux données sur la carte :

1. Sélectionnez un point : cliquez sur un élément ou touchez un élément de données sur la carte pour ouvrir ou mettre à jour la fenêtre de détails contenant les renseignements propres à cet élément.
2. Utilisez le tableau de données et la fonction de recherche : consultez la partie « Tableau de données » ci‑après.
3. Utilisez le réticule à l'aide des commandes du clavier : consultez la partie « Accessibilité – Navigation par clavier » ci‑après.


# Commandes de navigation

Vous pouvez utiliser les commandes de navigation pour modifier l'étendue de la carte.

Les commandes de navigation suivantes se trouvent dans le coin inférieur droit de la carte :

| Icône | Fonction | Description |
| --- | --- | --- |
| ![](navigation/zoomin.png) | Zoom avant – Plus (+) | Permet de faire un zoom avant d'un niveau sur la carte pour voir un contenu plus détaillé. |
| ![](navigation/zoomout.png) | Zoom arrière – Moins (‑) | Permet de faire un zoom arrière d'un niveau sur la carte pour voir un contenu moins détaillé. |
| ![](navigation/fullscreen.png) | Plein écran | Présente le contenu de la carte sur l'ensemble de la page. Cette fonction n'est disponible que lorsque la carte est intégrée à une autre page. |
| ![](navigation/geolocate.png) | Votre position | Permet de faire un zoom et un panoramique sur l'emplacement actuel de l'appareil. |
| ![](navigation/home.png) | Accueil/étendue initiale | Permet de faire un zoom et un panoramique de façon à afficher l'étendue initiale. |
| ![](navigation/help.png) | Aide | Ouvre ou ferme la boîte d'aide. |


# Renseignements de navigation

Les renseignements de navigation sont situés dans le coin inférieur droit de la carte et comprennent l'échelle de la carte et les coordonnées de positionnement de la souris ou du réticule.

Les coordonnées de positionnement peuvent être exprimées en degrés‑minutes‑secondes (DMS), en degrés décimaux ou en mètres, selon la projection et la configuration utilisées.


# Aperçu de la carte

L'aperçu de la carte présente une vue générale de la carte principale à une échelle réduite. Il se trouve dans le coin supérieur droit de la carte.

Cliquez sur l'aperçu de la carte, maintenez le bouton de la souris enfoncé et faites‑le glisser pour modifier l'étendue de la carte principale. Vous pouvez cliquer sur l'icône de la flèche basculante, dans le coin supérieur droit de l'aperçu de la carte, pour développer ou réduire l'aperçu.


# Légende

La fenêtre Légende, accessible à partir de la première option du menu de gauche, sert de légende à la carte et répertorie les couches disponibles pouvant être affichées sur la carte.

Cliquez sur le bouton des couches, situé en haut, à gauche de la partie centrale de l'outil de visualisation pour consulter la liste des couches.

Chaque couche est associée à un ensemble de symboles. Pour les couches simples ne comptant qu'une seule icône représentative, l'icône figurera à côté du nom de la couche. Pour les couches complexes (c.‑à‑d. celles qui utilisent plusieurs symboles par couche), l'icône figurera sous la forme d'une pile de feuilles que vous pouvez ouvrir ou fermer et que vous pouvez développer sous le nom de la couche. Les couches du Service de cartes Web peuvent compter une légende graphique définie; si c'est le cas, elle sera affichée de la même manière, dans un menu déroulant.

Vous pouvez à tout moment afficher ou masquer la couche en cochant la case située à côté d'elle.

Veuillez noter qu'un message d'erreur s'affichera si une couche ne se charge pas correctement. Au lieu des mesures normales liées à la couche, vous pouvez choisir de charger la couche à nouveau (ce qui est particulièrement utile en cas de problème de connectivité temporaire) ou de supprimer la couche.


# Paramètres des couches

Lorsque vous survolez une couche avec la souris ou passez à une couche à l'aide de la touche de tabulation, sélectionnez l'icône des trois points pour afficher le menu des paramètres.

Veuillez noter que certains paramètres ne sont nécessairement pas disponibles, selon différents facteurs, comme le type de couche ou la configuration.

| Nom | Description |
| --- | --- |
| Métadonnées | Affiche les métadonnées pertinentes dans une fenêtre coulissante. |
| Paramètres | Ouvre une fenêtre coulissante à l'intérieur de laquelle la zone de délimitation et les données interrogeables peuvent être affichées ou masquées et le degré d'opacité peut être réglé. |
| Tableau de données | Affiche les données dans un tableau. |
| Légende | Développe ou réduit la pile d'images de la légende. |
| Zoomer à la limite | Permet d'avoir une vue panoramique et de faire un zoom sur la carte afin d'afficher la limite de la couche. |
| Recharger | Recharge la couche. |
| Retirer | Supprime la couche de la carte et de la légende. |


# Sous‑menu de la couche

Dans la fenêtre Légende, quatre fonctions s'affichent sur une ligne en haut :

| Nom | Description |
| --- | --- |
| Ajouter une couche | Options du menu permettant d'ajouter une couche à partir d'un fichier ou d'un service. |
| Réorganiser les couches | Fournit une solution de rechange à la réorganisation à l'aide de la technique glisser‑déposer, déjà proposée. Lorsque les couches sont sélectionnées, vous ne pouvez les réorganiser qu'en maintenant l'icône de la poignée, située à côté de chaque couche. Cette fonction est très utile pour les appareils à écran tactile. |
| Basculer les groupes | Élargit ou réduit tous les groupes. |
| Basculer la visibilité | Affiche ou masque toutes les couches. |


# Recherche géolocalisée

### Utilisation générale

La fonction de recherche géolocalisée permet aux utilisateurs de rechercher des lieux au Canada. Lorsque vous cliquez sur l'icône « Recherche géolocalisée », dans le menu de gauche, une fenêtre comprenant un champ de saisie pour la recherche par mot‑clé s'affiche.

#### Types de recherche pris en charge

**Recherche par mot‑clé**  : saisissez n'importe quel mot‑clé dans l'outil de recherche géolocalisée pour afficher une liste de résultats contenant ce mot‑clé.

- Chaque résultat de recherche comprend les éléments suivants : le nom du lieu (mot‑clé en surbrillance), la province du lieu et le type de lieu (lac, ville, village, etc.).
- Cliquez sur un résultat distinct pour saisir les coordonnées et faire un zoom sur la carte de façon à ce qu'elle soit centrée sur le lieu souhaité.

**Recherche par région de tri d'acheminement (RTA)** : une **région de tri d'acheminement (RTA)** est une façon de désigner une zone géographique en fonction des trois premiers caractères d'un code postal canadien. Tous les codes postaux qui commencent par les trois mêmes caractères font partie d'une même **RTA**.

- Une recherche par RTA permet d'afficher une liste de résultats à proximité de cette région.
- Le tout premier résultat désigne le lieu de la RTA elle‑même; cliquez pour faire un zoom et centrer la carte sur la RTA.
- Par exemple : saisissez **M3H**.

**Recherche par latitude et longitude**  : effectuez une recherche à partir des coordonnées de latitude et de longitude pour afficher une liste de résultats à proximité de ce point de la carte.

- Comme dans le cas de la recherche par RTA, le premier résultat désignera le lieu des coordonnées saisies, cliquez sur ce résultat pour faire un zoom et centrer la carte sur ce point.
- La recherche par latitude et longitude accepte les espaces, les virgules, les points‑virgules ou les barres verticales (|) pour séparer les coordonnées.
- Par exemple : saisissez **54.3733,‑91.7417**.

**Recherche par le SNRC**  : le Système national de référence cartographique (SNRC) est un système utilisé pour fournir des cartes topographiques générales du pays, qui produit des renseignements sur les formes de relief, les lacs et les rivières, les forêts, les routes et les chemins de fer, etc.

- Le SNRC est divisé en trois grandes zones : la zone sud (latitudes comprises entre 40°N et 68°N), la zone arctique (latitudes comprises entre 68°N et 80°N) et la zone de l'Extrême‑Arctique (latitudes comprises entre 80°N et 88°N).
- Le numéro d'une carte du SNRC consiste en une chaîne contenant un nombre désignant une feuille de carte, une lettre désignant une zone de carte et un nombre désignant la feuille de carte à l'échelle.
- De même, le premier résultat désignera un emplacement du numéro de carte SNRC, cliquez pour centrer la carte sur cette zone.
- Par exemple : saisissez **030M13**.

#### Types de recherche non pris en charge

**Adresse municipale**  : l'outil de recherche géolocalisée ne prend pas en charge la recherche par adresse municipale.

- La saisie d'une adresse valide ne devrait donner aucun résultat.

### Filtres de la recherche géolocalisée

Lorsque vous recherchez un lieu, une fenêtre s'affiche sous le champ de recherche. Cette fenêtre de résultats contient deux listes déroulantes qui vous permettent de filtrer les résultats de la recherche par **province** et par **type** (lac, ville, rivière, etc.). À droite de ces deux listes se trouve le bouton **Effacer les filtres** qui vous permet d'effacer les éléments de filtre sélectionnés.

Au bas de la fenêtre des résultats, il y a une case à cocher intitulée **Visible sur la carte**. Cochez cette case pour filtrer davantage les résultats et n'afficher que les lieux qui sont actuellement visibles sur la carte. Si vous déplacez la carte ou si vous faites un zoom avant ou arrière alors que cette case est cochée, les résultats seront automatiquement mis à jour de façon à afficher les lieux qui se trouvent sur la carte.


# Outil de sélection de la carte de base

L'outil de sélection de la carte de base modifie la carte de base sous‑jacente pour fournir un éventail de contextes géographiques.

**Pour ouvrir l'outil de sélection de la carte de base :**

Sélectionnez l'icône « Carte de base » dans le menu de gauche. Une liste de cartes de base s'affichera, les cartes étant séparées par type de projection (p. ex. Lambert ou Web Mercator). La carte sera chargée à nouveau si vous modifiez la projection, mais pas si vous la changez pour une carte de base au sein de la même projection.


# Exporter une image

Vous pouvez exporter une image de la carte et de ses couches visibles, ainsi qu'une légende, un titre, une flèche d'orientation pointant vers le nord, une échelle, une note de bas de page personnalisée\* et une référence temporelle†.

Sélectionnez l'icône de la flèche descendante « Exporter » dans le menu de gauche pour commencer. Une fenêtre présentant une image de la carte s'affichera, vous pourrez également saisir un titre, si vous le souhaitez.

Si vous souhaitez ajouter ou supprimer des parties de l'image exportée, comme une légende, cliquez sur la roue dentée, dans le coin inférieur droit de la fenêtre. Vous pourrez y sélectionner et désélectionner les parties qui figureront sur l'image exportée.

Cliquez sur le bouton de téléchargement, dans le coin inférieur gauche de la fenêtre, pour générer l'image finale de la carte.

\*Veuillez noter que la note de bas de page n'est peut‑être pas disponible, selon la carte.

†Veuillez noter que la référence temporelle est facultative et n'est peut‑être pas disponible, selon la carte.


# Fenêtre du tableau de données

La fenêtre **Tableau de données** est présentée ci‑dessus dans son état initial.

En plus de pouvoir faire défiler les données, vous pouvez :

- trier les données en cliquant sur l'en‑tête de la colonne. Vous pouvez trier plusieurs colonnes en maintenant la touche Maj enfoncée avant de cliquer sur un en‑tête de colonne;
- uvrir la fenêtre de détails correspondant à une ligne donnée en cliquant sur l'icône représentant une feuille de papier _Détails_;
- placer la vue cartographique à l'emplacement de l'élément correspondant à une ligne donnée en cliquant sur l'icône de la loupe _Zoom à l'élément_;
- déplacer les colonnes en cliquant sur les flèches gauche et droite, à côté du titre de la colonne, pour déplacer la colonne vers la gauche ou la droite;
- appliquer un filtre sur les colonnes selon une plage numérique, du texte, une sélection ou une date (si la configuration le permet). Vous pouvez appliquer ou supprimer les filtres à partir des options de la carte, situées dans le coin supérieur droit du tableau de données, pour que les modifications apportées au tableau s'affichent sur la carte;
- afficher et/ou masquer les colonnes en cliquant sur l'icône _Masquer les colonnes_, située dans le coin supérieur droit du tableau de données;
- vous déplacer dans le tableau au moyen du clavier.

Le nombre d'éléments figurant dans la couche est affiché dans le coin supérieur gauche, sous le titre de la couche.

### Commandes du tableau

Ce groupe de commandes est situé en haut du tableau de données et comporte les options suivantes:

#### Première rangée:

- ![](datatable/collapse.png) Réduire
  - Condense le tableau dans une petite fenêtre pour vous permettre de voir la carte en même temps.
- ![](datatable/expand.png) Développer
  - Développe le tableau en une fenêtre plus large qui s'adapte à la zone disponible sur la carte.
- ![](datatable/minimize.png) Réduire
  - Masque la grille de données de la carte. Vous pouvez développer la grille réduite en cliquant sur l'icône de la grille située dans la barre de menu de gauche.
- ![](datatable/close.png) Fermer
  - Ferme le tableau.
- Faire une recherche générale
  - Appliquer un filtre au tableau en veillant à ce que le terme recherché soit une sous‑chaîne des données des lignes d'au moins une colonne.

#### Deuxième rangée :

- ![](datatable/applyFilters.png) Appliquer des filtres à la carte
  - Met à jour la carte pour n'afficher que les données visibles dans le tableau.
  - Si les données du tableau correspondent déjà aux données affichées sur la carte, ce bouton sera désactivé.
- ![](datatable/toggleCols.png) Masquer les colonnes
  - Permet de choisir les colonnes que vous souhaitez afficher dans le tableau.
- ![](datatable/showFilters.png) Afficher les filtres
  - Lorsque cette option est désactivée, tous les filtres de colonnes seront masqués.
  - Lorsque cette option est désactivée, il n'est pas possible de modifier les filtres de colonnes.
  - Les filtres de colonnes demeurent en vigueur même lorsque l'option est désactivée.
- ![](datatable/extentFilter.png) Filtrer par étendue
  - Permet de basculer le filtre par portée
- ![](datatable/clearFilters.png) Efface la recherche et les filtres
    - Efface toutes les recherches et tous les filtres qui peuvent s'appliquer au tableau.

### Triage et réorganisation

Chaque colonne du tableau de données peut comprendre un ensemble de flèches désignant la manière dont la colonne peut être triée et réorganisée.

**Tri des colonnes**  : cliquez sur le titre de la colonne pour effectuer un tri croissant ou décroissant(pour les données numériques) ou en ordre alphabétique (pour les données textuelles).

- Une flèche vers le haut à côté du titre de la colonne indique que les données de la colonne sont triées de manière croissante ou par ordre alphabétique.
- Une flèche vers le bas à côté du titre de la colonne indique que les données de la colonne sont triées en manière décroissante ou par ordre alphabétique inverse.
- L'absence de flèche à côté du titre de la colonne indique qu'aucun tri n'est appliqué à la colonne visée.
- Enfoncez la touche Maj et sélectionnez les noms des colonnes pour trier plusieurs colonnes à la fois.
- Fonctionnement : la prochaine colonne sélectionnée à l'aide de la touche Maj sera triée en fonction des groupes de données identiques de la dernière colonne sélectionnée.

**Réorganisation des colonnes**  : les deux flèches droite et gauche, situées à côté du nom de la colonne, permettent de réorganiser les colonnes.

- Cliquez sur la flèche droite pour déplacer une colonne vers la droite.
- La flèche droite est désactivée pour la colonne la plus à droite d'un tableau de données.
- Cliquez sur la flèche gauche pour déplacer une colonne vers la gauche.
- La flèche gauche est désactivée pour la colonne la plus à gauche d'un tableau de données.

### Application d'un filtre aux données

Vous pouvez filtrer les données par colonne. Vous pouvez effectuer une recherche dans une colonne si un champ de saisie est situé sous le titre de l'en‑tête. Comme il a été mentionné précédemment, il existe quatre types de filtres :

- **Texte**  : champ de saisie de caractères. Utilisez le caractère de remplacement (\*) pour remplacer une séquence de zéro ou de plusieurs caractères (p. ex. si vous saisissez _\*levo_, les résultats de la recherche afficheront le mot Charlevoix).
- _Veuillez noter que sans caractère générique, les résultats ne montrent que les éléments où le mot recherché se trouve au début de la phrase._
- **Chiffre**  : champs de saisie qui n'acceptent que des chiffres.
  - Si vous définissez un minimum et un maximum, le filtre recherchera une plage.
  - Par exemple, si vous ne définissez qu'un minimum, l'opération _supérieur à_ sera effectuée.
- **Sélection**  : menu déroulant vous permettant de sélectionner une ou plusieurs valeurs prédéfinies.
- **Date**  : semblable au champ numérique, mais réservé aux dates.

Certains filtres ne sont pas modifiables, c'est‑à‑dire que vous ne pouvez pas modifier la valeur affichée. Une ligne pointillée se trouve sous la valeur.

### Recherche générale

Cette commande, qui se trouve dans le coin supérieur droit du tableau de données, permet d'appliquer un filtre global au tableau de données.

- Si vous saisissez la valeur _Brook_, le tableau de données sélectionnera les données qui contiennent le mot _Brook_ à n'importe quel endroit (p. ex. _Corner_ _Brook_ sera sélectionné).

### Navigation par clavier

Utilisez la touche Tab pour parcourir les commandes du tableau, et pour vous déplacer dans les trois principaux groupes du tableau :

- en‑têtes de colonnes;
- filtres de colonnes;
- corps du tableau.

Lorsqu'un groupe principal est visé, vous pouvez utiliser les flèches pour vous déplacer dans les cellules du tableau et trouver l'élément souhaité. La cellule du tableau sur laquelle vous vous trouvez est délimitée.

Pour accéder aux boutons et/ou aux champs de saisie d'une cellule, assurez‑vous que la cellule visée est délimitée (au moyen des flèches, comme ci‑dessus) et utilisez la touche Tab pour vous déplacer dans les cellules connexes.


# Accessibilité

La Plateforme de cartographie accessible et réutilisable est conçue pour être utilisée dans un contexte conforme aux normes WCAG 2.1 AA. Il incombe au propriétaire de la page de faire preuve de diligence raisonnable pour garantir la pleine conformité.

#### Navigation par clavier

Les fonctions accessibles à partir du clavier constituent une solution de rechange pour les utilisateurs qui ne sont pas en mesure d'utiliser une souris. Utilisez la touche Tab pour vous déplacer vers les liens et les commandes de la page. Enfoncez les touches Maj + Tab pour revenir en arrière. Utilisez la touche Entrée ou la barre d'espacement pour activer les liens et les commandes.

Lorsque la carte est mise au point, un marqueur en forme de réticule s'affiche au centre. Utilisez les **flèches** pour déplacer la carte, et les touches **+** / **-** pour effectuer un zoom avant ou un zoom arrière. Enfoncez la touche Entrée pour sélectionner un élément sous le réticule et afficher les données connexes dans la fenêtre Détails.